[metadata]
name = carlyleconfig
version = 2022.16
author = John Carlyle
description = Hierarchical config loader
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[bumpver]
current_version = "2022.16"
version_pattern = "YYYY.WW[.PATCH]"

[bumpver:file_patterns]
setup.cfg =
    version = {version}
    current_version = "{version}"